@@ -1,3 +1,8 @@
+2020-12-10  Akira Kakuto  <kakuto@w32tex.org>
+
+	* lib.h: Definition of eof() contradicts corecrt_io.h
+	in Visual Studio 2019.
+
 2020-09-24  Akira Kakuto  <kakuto@w32tex.org>
 
 	* texmfmp.c: Call kpse_in_name_ok() in find_input_file() for
